testy akceptacyjne i inne

--- a/other/todo.txt
+++ b/other/todo.txt
@@ -1,2 +1,3 @@
 - usunac w swoim czasie .gitkeep
 - mozna by zrobic enuma do gatunkow
+- zmienic CreateShowingsCommand na CreateShowingCommand -> bo nazwy bez "s" uzywamy wszedzie
