--- a/other/todo.txt
+++ b/other/todo.txt
@@ -6,3 +6,4 @@
 - DONE / poprawa metody isEmpty (prawdopodobnie na object -> i uspojnienie)
 - poprawa walidacji -> to znaczy w argumencie bedziemy przekazywac caly obiekt i switch/case po typach obiektow aby sprawdzac odpowiednie cechy danego obiektu
 - pohashowac reservationnumber
+-seat zmienic na number
