--- a/other/todo.txt
+++ b/other/todo.txt
@@ -7,3 +7,4 @@
 - poprawa walidacji -> to znaczy w argumencie bedziemy przekazywac caly obiekt i switch/case po typach obiektow aby sprawdzac odpowiednie cechy danego obiektu
 - pohashowac reservationnumber
 -seat zmienic na number
+- do poprawy czemu dla roznych showow traktuje zajete miejsca tak samo!!!!!
