-walidacja do createpaymentcommand oraz model do creditcard i paymenttype

--- a/other/todo.txt
+++ b/other/todo.txt
@@ -8,3 +8,7 @@
 - pohashowac reservationnumber
 -seat zmienic na number
 - do poprawy czemu dla roznych showow traktuje zajete miejsca tak samo!!!!!
+
+
+httpservletresponse
+httpresponse
